<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content"

    android:background="@color/white"
    tools:context=".ResultFragment">

    <include layout="@layout/toolbar"/>


    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="550dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_16sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_8sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewWinner"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:src="@drawable/trophy_svgrepo_com"
                    tools:ignore="ContentDescription,MissingConstraints"
                    tools:layout_editor_absoluteX="326dp"
                    tools:layout_editor_absoluteY="0dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:text="@string/congratulation"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/scoreTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="Wow ! You got the 5 out of 10"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="normal"
                    tools:ignore="HardcodedText,TextSizeCheck,VisualLintBounds" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/_16sdp"
                tools:ignore="VisualLintBounds">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_centerInParent="false"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:orientation="horizontal"
                        tools:ignore="MissingConstraints,UseCompoundDrawables">


                        <TextView
                            android:id="@+id/correct"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo6"
                            android:text="@string/_5_correct"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="normal"
                            tools:ignore="TextSizeCheck" />

                        <ImageView
                            android:id="@+id/imageViewCorrect"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="5dp"
                            android:src="@drawable/correct_success_tick_svgrepo_com"
                            tools:ignore="ContentDescription,MissingConstraints,VisualLintBounds" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">


                        <TextView
                            android:id="@+id/incorrect"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_5_wrong"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="normal"
                            tools:ignore="TextSizeCheck" />

                        <ImageView
                            android:id="@+id/imageViewWrong"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="5dp"
                            android:src="@drawable/wrong_svgrepo_com"
                            tools:ignore="ContentDescription,MissingConstraints,VisualLintBounds" />


                    </LinearLayout>


                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ll_replay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/todo9"
                    android:src="@drawable/baseline_360_24" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_replay"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:background="@drawable/edit_bg"
                    android:elevation="@dimen/_8sdp"
                    android:text="@string/try_again"
                    android:textColor="#021B1A"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_primary"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_explore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_primary"
            android:text="@string/explore_more"
            android:textColor="#021B1A"
            android:elevation="@dimen/_16sdp"
            android:textSize="@dimen/_16sdp"
            tools:ignore="TextSizeCheck,VisualLintButtonSize" />

    </LinearLayout>

</LinearLayout>